# hs-openfaas-examples

./: .gitignore  CHANGELOG.md  README.md  cabal-jsbackend.project  cabal-wasm.project  cabal.cross.project  cabal.project  default-nix.nix  default.nix  openfaas-examples.cabal  project.yml  shell2.nix
.github/workflows/: main.yml  nix.yml.disabled
lib/: MyHandler.hs
src/: Main.hs
