cabal-version:      3.4
name:               openfaas-examples
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Dan Dart
maintainer:         git@dandart.co.uk
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -static

library
    import:           warnings
    exposed-modules:  MyHandler
    build-depends:    base >= 4.17.0.0
                    , aeson
                    , bytestring
                    , containers
                    , openfaas
                    , text
    hs-source-dirs:   lib
    default-language: GHC2021
    default-extensions:  DerivingStrategies, UnicodeSyntax, ImportQualifiedPost

executable openfaas-examples
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.17.0.0
      , aeson
      , bytestring
      , openfaas
      , openfaas-examples
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:  DerivingStrategies, UnicodeSyntax, ImportQualifiedPost