cabal-version:   3.4
name:            openfaas-examples
version:         0.1.0.0
license:         GPL-3.0-only
license-file:    LICENSE
author:          Dan Dart
maintainer:      git@dandart.co.uk
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -static

library
  import:             warnings
  exposed-modules:    MyHandler
  build-depends:
    , aeson
    , base        >=4.18.0.0
    , bytestring
    , containers
    , openfaas
    , text

  hs-source-dirs:     lib
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

executable openfaas-examples
  import:             warnings
  main-is:            Main.hs
  build-depends:
    , aeson
    , base               >=4.18.0.0
    , bytestring
    , openfaas
    , openfaas-examples

  hs-source-dirs:     src
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

test-suite openfaas-test
  import:             warnings
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , base               >=4.18.0.0
    , hspec
    , openfaas-examples
    , QuickCheck

  other-modules:
