cabal-version:   3.12
name:            openfaas-examples
version:         0.2.0.0
license:         GPL-3.0-only
license-file:    LICENSE
author:          Dan Dart
maintainer:      git@dandart.co.uk
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  if arch(javascript)
    js-sources: jsbits/emcc-config.js
  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
  ghc-options: -Wall -Wwarn -Weverything
    -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags
    -Wno-missed-specialisations

library
  import:             warnings
  exposed-modules:    MyHandler
  build-depends:
    , aeson       ^>=2.2.3.0
    , base        ^>=4.21.0.0
    , bytestring  ^>=0.12.2.0
    , containers  ^>=0.8
    , openfaas    ^>=0.2.0.0
    , text        ^>=2.1.2

  hs-source-dirs:     lib
  default-language:   GHC2024
  default-extensions: UnicodeSyntax

executable openfaas-examples
  import:             warnings
  main-is:            Main.hs
  build-depends:
    -- , aeson              ^>=2.2.3.0
    , base               ^>=4.21.0.0
    -- , bytestring         ^>=0.12.2.0
    , openfaas           ^>=0.2.0.0
    , openfaas-examples  ^>=0.2.0.0

  hs-source-dirs:     src
  default-language:   GHC2024
  default-extensions: UnicodeSyntax

test-suite openfaas-test
  import:             warnings
  if arch(javascript) || arch(wasm32)
    buildable: False
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , base               ^>=4.21.0.0
    , hspec              ^>=2.11.12 
    , openfaas-examples  ^>=0.2.0.0
    , QuickCheck         ^>=2.15.0.1

  other-modules:
  build-tool-depends: hspec-discover:hspec-discover
